start bar z-index fix

--- a/src/style/startBar/startBar.css
+++ b/src/style/startBar/startBar.css
@@ -9,4 +9,6 @@
     
     background: #5f2c82;  /* fallback for old browsers */
     background: linear-gradient(to right, hsl(276, 49%, 34%), hsl(178, 50%, 42%));
+
+    z-index: var(--start-bar-z-index);
 }
