--- a/src/style/vars.css
+++ b/src/style/vars.css
@@ -14,4 +14,6 @@
     --window-main-button-ratio: 1;
     --window-icon-ratio: 0.6;
     
+
+    --start-bar-z-index: 4000000;
 }
